[gd_scene load_steps=36 format=3 uid="uid://suv2ur61xwjm"]

[ext_resource type="Script" path="res://Scenes/scene_manager.gd" id="1_igokh"]
[ext_resource type="PackedScene" uid="uid://dcebu7qbmi4e1" path="res://Scenes/main_menu.tscn" id="2_0tl4a"]
[ext_resource type="Script" path="res://Scenes/ui.gd" id="2_bpo23"]
[ext_resource type="Texture2D" uid="uid://bbc6ayqfyot" path="res://Textures/key.png" id="3_ee8ul"]
[ext_resource type="PackedScene" uid="uid://b8tr57ts7al71" path="res://Scenes/custom_button.tscn" id="4_qdxsa"]
[ext_resource type="Texture2D" uid="uid://4q5ura2ovct1" path="res://Textures/UI/Resume.png" id="5_3052b"]
[ext_resource type="Texture2D" uid="uid://bara0baq5rtmf" path="res://Textures/UI/Main menu.png" id="6_jhlme"]
[ext_resource type="Texture2D" uid="uid://8qnfh12ase7u" path="res://Textures/UI/Quit Game.png" id="7_j0mvh"]
[ext_resource type="Texture2D" uid="uid://0bo3cr8l5va2" path="res://Textures/UI/keyboard_arrows.png" id="8_tob6o"]
[ext_resource type="Texture2D" uid="uid://dbjl3uw7ew3h1" path="res://Textures/UI/keyboard_ctrl.png" id="9_78ha4"]
[ext_resource type="Texture2D" uid="uid://dcwh82syqha6y" path="res://Textures/UI/keyboard_escape.png" id="10_oytu7"]
[ext_resource type="Texture2D" uid="uid://bnaisnpmd26n6" path="res://Textures/UI/keyboard_shift.png" id="11_j62ar"]
[ext_resource type="Texture2D" uid="uid://duto0gio2smyo" path="res://Textures/UI/mouse_right.png" id="12_uuo6u"]
[ext_resource type="Texture2D" uid="uid://cb1sfpgp0rtcy" path="res://Textures/UI/mouse_left.png" id="13_63gax"]
[ext_resource type="Texture2D" uid="uid://xx6t3e3wrjax" path="res://Textures/VanditGames.png" id="14_qrk8c"]

[sub_resource type="LabelSettings" id="LabelSettings_m21a5"]
font_size = 64
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c3afc"]
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gts6t"]
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 6
outline_color = Color(0.47, 0.323125, 0.1175, 1)

[sub_resource type="Animation" id="Animation_ychwl"]
resource_name = "IN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.026, 0, 0.13, 0.560784), Color(0.026, 0, 0.13, 0.560784)]
}

[sub_resource type="Animation" id="Animation_b8t34"]
resource_name = "OUT"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.026, 0, 0.13, 0), Color(0.026, 0, 0.13, 0)]
}

[sub_resource type="Animation" id="Animation_yjpko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.026, 0, 0.13, 0.560784)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vmjfn"]
_data = {
"IN": SubResource("Animation_ychwl"),
"OUT": SubResource("Animation_b8t34"),
"RESET": SubResource("Animation_yjpko")
}

[sub_resource type="LabelSettings" id="LabelSettings_vj5bi"]
font_size = 48
outline_size = 32
outline_color = Color(0, 0, 0.117647, 1)

[sub_resource type="Animation" id="Animation_4ig8p"]
resource_name = "IN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.13, 0, 0.00216663, 0.560784), Color(0.13, 0, 0.00216663, 0.560784)]
}

[sub_resource type="Animation" id="Animation_wmvl8"]
resource_name = "OUT"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.13, 0, 0.00216663, 0), Color(0.13, 0, 0.00216663, 0)]
}

[sub_resource type="Animation" id="Animation_t8wby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.13, 0, 0.00216663, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pumgg"]
_data = {
"IN": SubResource("Animation_4ig8p"),
"OUT": SubResource("Animation_wmvl8"),
"RESET": SubResource("Animation_t8wby")
}

[sub_resource type="LabelSettings" id="LabelSettings_3fn73"]
font_size = 128
outline_size = 32
outline_color = Color(0, 0, 0.231373, 1)

[sub_resource type="Gradient" id="Gradient_5rf8r"]
colors = PackedColorArray(0.187176, 0.187176, 0.187176, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rhl82"]
frequency = 0.001

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2bxjn"]
color_ramp = SubResource("Gradient_5rf8r")
noise = SubResource("FastNoiseLite_rhl82")

[sub_resource type="Animation" id="Animation_iu3j6"]
resource_name = "FadeBlack"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3sujr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yd8pc"]
resource_name = "UnfadeBlack"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s5hw2"]
_data = {
"FadeBlack": SubResource("Animation_iu3j6"),
"RESET": SubResource("Animation_3sujr"),
"UnfadeBlack": SubResource("Animation_yd8pc")
}

[node name="SceneManager" type="Node3D"]
script = ExtResource("1_igokh")

[node name="CurrentScene" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
layer = 3
script = ExtResource("2_bpo23")

[node name="HUD" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LanternBar" type="ProgressBar" parent="UI/HUD"]
modulate = Color(1, 1, 0.439216, 1)
custom_minimum_size = Vector2(50, 150)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -183.0
offset_right = -28.0
offset_bottom = -33.0
grow_horizontal = 0
grow_vertical = 0
value = 100.0
fill_mode = 3

[node name="StaminaBar" type="ProgressBar" parent="UI/HUD"]
modulate = Color(0, 1, 0.433333, 0)
custom_minimum_size = Vector2(805, 15)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -55.0
offset_right = 795.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="StaminaBar2" type="ProgressBar" parent="UI/HUD"]
modulate = Color(0, 1, 0.433333, 0)
custom_minimum_size = Vector2(805, 15)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -55.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
fill_mode = 1
show_percentage = false

[node name="CrossHair" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -44.0
offset_right = 20.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "+"
label_settings = SubResource("LabelSettings_m21a5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Keys" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -127.0
offset_right = 74.0
offset_bottom = -39.0
grow_vertical = 0
text = "0/5"
label_settings = SubResource("LabelSettings_c3afc")
vertical_alignment = 1

[node name="Key" type="TextureRect" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 177.0
offset_top = -125.0
offset_right = 266.0
offset_bottom = -87.0
grow_vertical = 0
rotation = 1.61044
texture = ExtResource("3_ee8ul")
expand_mode = 1

[node name="Note" type="Label" parent="UI/HUD"]
visible = false
custom_minimum_size = Vector2(500, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -350.0
offset_right = 250.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
text = "Texto por defecto de las notas, uno dos tres cuatro cinco seis siete ocho nueve diez eins zwei drei vier funf sechs sieben acht neun zehn elf zwolf dreizehn vierzehn funfzehn sechzehn siebzehn achtzehn neunzehn zwanzig eins und zwanzig zwei und zwanzig..."
label_settings = SubResource("LabelSettings_gts6t")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="UI/HUD/Note"]
show_behind_parent = true
custom_minimum_size = Vector2(560, 760)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -350.0
offset_right = 250.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="Close" type="Button" parent="UI/HUD/Note"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 482.0
offset_top = -34.0
offset_right = 500.0
offset_bottom = -3.0
scale = Vector2(2.61713, 1.7685)
text = "X"
flat = true

[node name="PauseMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -94.0
offset_right = 121.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.026, 0, 0.13, 0.560784)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/PauseMenu/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_vmjfn")
}
playback_default_blend_time = 1.0

[node name="Resume" parent="UI/PauseMenu" instance=ExtResource("4_qdxsa")]
layout_mode = 0
offset_left = 122.0
offset_top = 133.0
offset_right = 516.0
offset_bottom = 417.0

[node name="Text" parent="UI/PauseMenu/Resume/Control" index="0"]
offset_left = 62.0
offset_right = 306.0
texture = ExtResource("5_3052b")

[node name="MainMenu" parent="UI/PauseMenu" instance=ExtResource("4_qdxsa")]
layout_mode = 0
offset_left = 298.0
offset_top = 403.0
offset_right = 692.0
offset_bottom = 687.0

[node name="Text" parent="UI/PauseMenu/MainMenu/Control" index="0"]
offset_left = 19.0
offset_right = 473.0
texture = ExtResource("6_jhlme")

[node name="Quit" parent="UI/PauseMenu" instance=ExtResource("4_qdxsa")]
layout_mode = 0
offset_left = 499.0
offset_top = 676.0
offset_right = 893.0
offset_bottom = 960.0

[node name="Text" parent="UI/PauseMenu/Quit/Control" index="0"]
offset_left = 23.0
offset_right = 473.0
texture = ExtResource("7_j0mvh")

[node name="TextureRect" type="TextureRect" parent="UI/PauseMenu"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1106.0
offset_top = 122.0
offset_right = 1234.0
offset_bottom = 250.0
texture = ExtResource("8_tob6o")

[node name="TextureRect2" type="TextureRect" parent="UI/PauseMenu"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1106.0
offset_top = 258.0
offset_right = 1234.0
offset_bottom = 386.0
texture = ExtResource("9_78ha4")

[node name="TextureRect3" type="TextureRect" parent="UI/PauseMenu"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1106.0
offset_top = 398.0
offset_right = 1234.0
offset_bottom = 526.0
texture = ExtResource("10_oytu7")

[node name="TextureRect4" type="TextureRect" parent="UI/PauseMenu"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1106.0
offset_top = 528.0
offset_right = 1234.0
offset_bottom = 656.0
texture = ExtResource("11_j62ar")

[node name="TextureRect5" type="TextureRect" parent="UI/PauseMenu"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1106.0
offset_top = 647.0
offset_right = 1234.0
offset_bottom = 775.0
texture = ExtResource("12_uuo6u")

[node name="TextureRect6" type="TextureRect" parent="UI/PauseMenu"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1106.0
offset_top = 801.0
offset_right = 1234.0
offset_bottom = 929.0
texture = ExtResource("13_63gax")

[node name="Label" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 1256.0
offset_top = 157.0
offset_right = 1506.0
offset_bottom = 224.0
text = "Movement"
label_settings = SubResource("LabelSettings_vj5bi")

[node name="Label2" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 1265.0
offset_top = 289.0
offset_right = 1515.0
offset_bottom = 356.0
text = "Crouch"
label_settings = SubResource("LabelSettings_vj5bi")

[node name="Label3" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 1262.0
offset_top = 422.0
offset_right = 1512.0
offset_bottom = 489.0
text = "Pause"
label_settings = SubResource("LabelSettings_vj5bi")

[node name="Label4" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 1265.0
offset_top = 554.0
offset_right = 1515.0
offset_bottom = 621.0
text = "Run"
label_settings = SubResource("LabelSettings_vj5bi")

[node name="Label5" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 1265.0
offset_top = 684.0
offset_right = 1757.0
offset_bottom = 751.0
text = "Turn on/off flashlight"
label_settings = SubResource("LabelSettings_vj5bi")

[node name="Label6" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 1267.0
offset_top = 821.0
offset_right = 1759.0
offset_bottom = 888.0
text = "Interact"
label_settings = SubResource("LabelSettings_vj5bi")

[node name="TextureRect7" type="TextureRect" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1776.0
offset_top = 935.0
offset_right = 125.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.53148, 0.53148)
mouse_filter = 2
texture = ExtResource("14_qrk8c")
expand_mode = 1

[node name="DeathScreen" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="UI/DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -94.0
offset_right = 121.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.13, 0, 0.00216663, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/DeathScreen/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_pumgg")
}
playback_default_blend_time = 1.0

[node name="Label" type="Label" parent="UI/DeathScreen"]
modulate = Color(1, 0.44, 0.44, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -680.0
offset_top = 170.0
offset_right = 755.0
offset_bottom = 345.0
grow_horizontal = 2
text = "They're just bubbles..."
label_settings = SubResource("LabelSettings_3fn73")
autowrap_mode = 2

[node name="MainMenu" parent="UI/DeathScreen" instance=ExtResource("4_qdxsa")]
layout_mode = 0
offset_left = 647.0
offset_top = 396.0
offset_right = 1041.0
offset_bottom = 680.0

[node name="Text" parent="UI/DeathScreen/MainMenu/Control" index="0"]
offset_left = 19.0
offset_right = 473.0
texture = ExtResource("6_jhlme")

[node name="Quit" parent="UI/DeathScreen" instance=ExtResource("4_qdxsa")]
layout_mode = 0
offset_left = 848.0
offset_top = 669.0
offset_right = 1242.0
offset_bottom = 953.0

[node name="Text" parent="UI/DeathScreen/Quit/Control" index="0"]
offset_left = 23.0
offset_right = 473.0
texture = ExtResource("7_j0mvh")

[node name="CurrentOverlay" type="CanvasLayer" parent="."]
layer = 2

[node name="MainMenu" parent="CurrentOverlay" instance=ExtResource("2_0tl4a")]
mouse_filter = 1

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="LoadingScreen" type="TextureRect" parent="TransitionLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -227.0
offset_top = -217.0
offset_right = 201.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("NoiseTexture2D_2bxjn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionLayer"]
libraries = {
"": SubResource("AnimationLibrary_s5hw2")
}

[connection signal="pressed" from="UI/HUD/Note/Close" to="UI" method="_on_close_pressed"]
[connection signal="custom_pressed" from="UI/PauseMenu/Resume" to="UI" method="_on_resume_pressed"]
[connection signal="custom_pressed" from="UI/PauseMenu/MainMenu" to="UI" method="_on_main_menu_pressed"]
[connection signal="custom_pressed" from="UI/PauseMenu/Quit" to="UI" method="_on_quit_pressed"]
[connection signal="custom_pressed" from="UI/DeathScreen/MainMenu" to="UI" method="_on_main_menu_pressed"]
[connection signal="custom_pressed" from="UI/DeathScreen/Quit" to="UI" method="_on_quit_pressed"]

[editable path="UI/PauseMenu/Resume"]
[editable path="UI/PauseMenu/MainMenu"]
[editable path="UI/PauseMenu/Quit"]
[editable path="UI/DeathScreen/MainMenu"]
[editable path="UI/DeathScreen/Quit"]
